# SimpleCppLogger

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_and_test_linux.yml  build_and_test_macos.yml  build_and_test_windows.yml  build_linux.yml.disabled  build_macos.yml.disabled  build_windows.yml.disabled  test_linux.yml.disabled  test_macos.yml.disabled  test_windows.yml.disabled
CMake/: BuildThirdPartyProject.cmake
CPP_Project/: CMakeLists.txt  main.cpp
CPP_Project/CMake/: Config.cmake.in  install.cmake
CPP_Project/Headers/SimpleCppLogger/: ApiMacro.h  ConsoleAppender.h  LogAppender.h  LogFormatter.h  LogLevel.h  LogMacros.h  LogMessage.h  LogStream.h  Logger.h  SimpleFormatter.h
CPP_Project/Sources/SimpleCppLogger/: ConsoleAppender.cpp  LogAppender.cpp  LogMessage.cpp  LogStream.cpp  Logger.cpp  SimpleFormatter.cpp
CPP_Project_Tests/: CMakeLists.txt  main.cpp
CPP_Project_Tests/Headers/SimpleCppLogger/: ConsoleAppenderTest.h  LogLevelTest.h  LogMacrosTest.h  LogMessageTest.h  LogStreamTest.h  LoggerTest.h  SimpleFormatterTest.h
CPP_Project_Tests/Sources/SimpleCppLogger/: ConsoleAppenderTest.cpp  LogLevelTest.cpp  LogMacrosTest.cpp  LogMessageTest.cpp  LogStreamTest.cpp  LoggerTest.cpp  SimpleFormatterTest.cpp
Scripts/Linux/: build_and_run_tests.sh  build_release.sh
Scripts/Linux/Helpers/: build_script.sh
Scripts/Mac/: build_and_run_tests.sh  build_release.sh
Scripts/Mac/Helpers/: build_script.sh
Scripts/Win/: build_and_deploy.sh  build_and_run_tests.sh  build_release.sh
Scripts/Win/Helpers/: build_script.sh
